@@ -191,6 +191,8 @@ POSSIBILITY OF SUCH DAMAGE.
 # endif
 #include <AvailabilityMacros.h>
 
+#define TORRENT_USE_PURGABLE_CONTROL 1
+
 #if MAC_OS_X_VERSION_MIN_REQUIRED >= 1070
 # ifdef TORRENT_USE_OPENSSL
 #  define TORRENT_USE_COMMONCRYPTO 1
@@ -550,6 +552,10 @@ inline int snprintf(char* buf, int len, char const* fmt, ...)
 
 #ifndef TORRENT_HAS_BOOST_UNORDERED
 #define TORRENT_HAS_BOOST_UNORDERED 1
+#endif
+
+#ifndef TORRENT_USE_PURGABLE_CONTROL
+#define TORRENT_USE_PURGABLE_CONTROL 0
 #endif
 
 #if !defined TORRENT_IOV_MAX
